--- a/src/features/Skill/Skill.css
+++ b/src/features/Skill/Skill.css
@@ -18,7 +18,7 @@
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
         padding: 1vh 1vw;
         border-radius: 9px;
-        font-size: 4vw;
+        font-size: 4rem;
     }
 
     .description-container {
@@ -31,22 +31,22 @@
     }
 
     .description-heading {
-        font-size: 2.5vw;
+        font-size: 2.5rem;
         margin: 1vh 0;
     }
 
     .description {
-        font-size: 1.5vw;
+        font-size: 1.5rem;
     }
 
     .utterance-heading {
         margin-top: 4vh;
-        font-size: 2.5vw;
+        font-size: 2.5rem;
     }
 
     .utterance {
         margin-top: 1.5vh;
-        font-size: 1.5vw;
+        font-size: 1.5rem;
     }
 
 
