--- a/src/features/Skillstore/Skillstore.css
+++ b/src/features/Skillstore/Skillstore.css
@@ -16,7 +16,7 @@
     background-color: cornsilk;
     padding: 1vh 1vw;
     border-radius: 5px;
-    font-size: 4vw;
+    font-size: 4rem;
 }
 
 .categories-sub-container {
@@ -33,6 +33,6 @@
     margin-top: 4vh;
     flex-direction: column;
     align-items: center;
-    font-size: 3vw;
+    font-size: 3rem;
     cursor: pointer;
 }
