--- a/src/features/Carousel/Carousel.css
+++ b/src/features/Carousel/Carousel.css
@@ -11,7 +11,7 @@
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     padding: 1vh 1vw;
     border-radius: 9px;
-    font-size: 4vw;
+    font-size: 4rem;
 }
 
 .categories-sub-container {
@@ -29,7 +29,7 @@
     margin-top: 4vh;
     flex-direction: column;
     align-items: center;
-    font-size: 3vw;
+    font-size: 3rem;
     cursor: pointer;
 }
 
@@ -39,5 +39,5 @@
   }
 
 .category-title {
-    font-size: 2vw;
+    font-size: 2rem;
 }
