--- a/src/features/Navbar/Navbar.css
+++ b/src/features/Navbar/Navbar.css
@@ -2,7 +2,7 @@
     display: flex;
     background-color: black;
     color: white;
-    height: 10vh;
+    min-height: 10vh;
     padding: 0 1vw;
 }
 
@@ -27,6 +27,6 @@
 }
 
 .fa-user-circle {
-    font-size: 2vw;
+    font-size: 2rem;
     margin-right: 1vw;
 }
