--- a/src/features/Home/Home.css
+++ b/src/features/Home/Home.css
@@ -4,6 +4,17 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    animation: pop-in ease-out 0.7s;
+}
+
+@keyframes pop-in {
+    0% {
+        transform: perspective(200px) translateZ(-30px);
+    }
+
+    100% {
+        transform: perspective(200px) translateZ(0px);
+    }
 }
 
 .title {
