--- a/src/features/Skill/Skill.css
+++ b/src/features/Skill/Skill.css
@@ -11,6 +11,7 @@
         padding: 2vh 1vw;
         margin: 5vh 0;
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+        animation:slide-right 0.6s;     
     }
 
     .skill-heading {
