--- a/src/features/Login/Login.css
+++ b/src/features/Login/Login.css
@@ -10,7 +10,19 @@
     transform: translateX(-50%);
     top: 10%;
     border-radius: 7px;
-    border: 2px solid black
+    border: 2px solid black;
+    animation-name: slide-up;
+    animation-duration: 0.5s;
+}
+
+@keyframes slide-up {
+    0% {
+        transform: translate(-50%,-10%);
+    }
+
+    100% {
+        transform: translate(-50%,0%);
+    }
 }
 
 .fa-window-close {
