--- a/src/features/Skillstore/Skillstore.css
+++ b/src/features/Skillstore/Skillstore.css
@@ -10,6 +10,7 @@
     background-color: rgb(255, 227, 148);
     border-radius: 7px;
     padding: 2vh 1vw;
+    animation:slide-right 0.6s;
 }
 
 .categories-heading {
